--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <table>
         <tr>
-            <td> <img src="images/icard.jpg" alt="block-chain" height="200px"></td>
+            <td> <img src="icard.jpg" alt="block-chain" height="200px"></td>
             <td>
                 <h1>Harshit kumar</h1>
                 <p>I completed my <em>BCA</em> from <strong>RCE</strong></p>
